login result çözüldü

--- a/register.html
+++ b/register.html
@@ -24,6 +24,9 @@
                 <h3 id="Register">
                     Register
                 </h3>
+		<a data-role="button" data-theme="e" href="home.html" data-icon="home" data-iconpos="left" class="ui-btn-left">
+                    Home
+                </a>
             </div>
             <div data-role="content">
                 <div data-role="fieldcontain">
@@ -69,7 +72,7 @@
                         </label>
                     </fieldset>
                 </div>
-                <a data-role="button" data-theme="e" href="http://seylul.github.com/ma/home2" data-icon="check" data-iconpos="right">
+                <a data-role="button" data-theme="e" href="home2.html" data-icon="check" data-iconpos="right">
                     Accept
                 </a>
             </div>
