--- a/home2.html
+++ b/home2.html
@@ -30,8 +30,8 @@
                     <img id="home_image" src="https://raw.github.com/Seylul/seylul.github.com/master/chrome/home.png" alt="image" style="width: 288px; height: 200px" />
                 </div>
                 <div id="Block" class="ui-grid-a">
-                    <div class="ui-block-a"><a href="http://seylul.github.com/ma/app">
-                        <input id="Calculate" type="submit" data-theme="e" data-icon="star" data-iconpos="left" value="Calculate" />
+                    <div class="ui-block-a"><a href="app.html" target="_blank">
+                        <input id="Calculate" type="submit" data-theme="e" data-icon="star" data-iconpos="left" value="Calculate"  />
                     </div>
                     <div class="ui-block-b">
                     </div>
@@ -39,10 +39,10 @@
                     <div class="ui-block-a">
                         
                     </div>
-                    <div class="ui-block-b"><a href="http://seylul.github.com/ma/help">
+                    <div class="ui-block-b"><a href="help.html">
 <input id="Help" type="submit" data-theme="e" data-icon="alert" data-iconpos="right" value="Help"/>
                     </div>
-                    <div class="ui-block-a"><a href="http://seylul.github.com/ma/about">
+                    <div class="ui-block-a"><a href="about.html">
 <input id="About" type="submit" data-theme="e" data-icon="info" data-iconpos="left" value="About"/>
 
                     </div>
