--- a/home.html
+++ b/home.html
@@ -31,7 +31,7 @@
                 </div>
                 <ul id="Log_in" data-role="listview" data-divider-theme="e" data-inset="true">
                     <li data-theme="e">
-                        <a href="login.html" data-transition="slide">
+                        <a href="login.html" data-transition="slide" target="_blank" >
                             Log in
                         </a>
                     </li>
