--- a/login.html
+++ b/login.html
@@ -46,7 +46,7 @@
 							<input name="" id="password_login" placeholder="" value="" type="password" />
 						</fieldset>
 					</div>
-					<button id="submit"><a id="Login_login" data-role="button" data-theme="e" data-icon="check" data-iconpos="right">
+					<button id="submit" data-theme="e" data-icon="check" data-iconpos="right" ><a id="Login_login" data-role="button" >
 						Log in
 					</a></button>
                 </form>
