register kısmı tamam

--- a/login.html
+++ b/login.html
@@ -50,7 +50,7 @@
 						Log in
 					</a></button>
                 </form>
-                <a id="Register_now" data-role="button" data-theme="e" href="register.html">
+                <a id="Register_now" data-role="button" data-theme="e"i target="_blank" href="register.html">
                     Register Now
                 </a>
                 <div>
