add interesting places link to home page

--- a/home2.html
+++ b/home2.html
@@ -36,8 +36,8 @@
                     <div class="ui-block-a"><a href="app.html" target="_blank">
                         <input id="Calculate" type="submit" data-theme="e" data-icon="star" data-iconpos="left" value="Calculate"  />
                     </div>
-                    <div class="ui-block-a">
-                        
+                    <div class="ui-block-a"><a href="interest.html" target="_blank">
+                        <input id="Explore" type="submit" data-theme="e" data-icon="star" data-iconpos="left" value="Explore"  />
                     </div>
                     <div class="ui-block-a"><a href="help.html">
 						<input id="Help" type="submit" data-theme="e" data-icon="alert" data-iconpos="left" value="Help"/>
