fix back button

--- a/help.html
+++ b/help.html
@@ -24,8 +24,8 @@
                 <h3 id="Help">
                     Help
                 </h3>
-				<a data-role="button" data-theme="e" href="index.html" data-icon="home" data-iconpos="left" class="ui-btn-left">
-                    Home
+				<a data-role="button" data-theme="e" href="home2.html" data-icon="home" data-iconpos="left" class="ui-btn-left">
+                    Back
                 </a>
             </div>
             <div data-role="content">
