--- a/interest.html
+++ b/interest.html
@@ -29,7 +29,7 @@
                 </a>
             </div>
             <div data-role="content">
-                <div id="map_canvas" style="width: 100%px; height: 300px; position: relative; background-color: #fbfbfb; border: 1px solid #b8b8b8;">
+                <div id="map_canvas" style="width: 100%px; height: 250px; position: relative; background-color: #fbfbfb; border: 1px solid #b8b8b8;">
                     <div style="position: absolute; top: 50%; left: 50%; margin-left: -16px; margin-top: -18px" /></div>
                 </div>
 		<table style="width:100%">
@@ -50,12 +50,17 @@
 			<option value="synagogue">Synagogue</option>
 			<option value="zoo">Zoo</option>
 		</select></td>
+		</tr>
+		<tr>
 		<td><div style="color:#1b556a; font-weight:bold;" >Radius:</div></td>
 		<td><select id="radius" onchange="updateMode()">
 			<option value="5000">5000</option>
 			<option value="50000">50000</option>
 			<option value="500000">500000</option>
-		</select></td>
+			</select>
+		</td>
+		</tr>
+		<tr>
 		<td><div style="color:#1b556a; font-weight:bold;" >Display:</div></td>
 		<td><select id="mapid" onchange="updateMode()">
 			<option value="Roadmap">Roadmap</option>
